--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/srakowski/kwota/issues"
   },
-  "homepage": "https://github.com/srakowski/kwota#readme"
+  "homepage": "https://github.com/srakowski/kwota#readme",
+  "dependencies": {
+    "express": "^4.13.4",
+    "mongodb": "^2.1.7",
+    "passport": "^0.3.2"
+  }
 }
