--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   },
   "homepage": "https://github.com/srakowski/kwota#readme",
   "dependencies": {
+    "body-parser": "^1.15.0",
+    "cookie-parser": "^1.4.1",
+    "debug": "^2.2.0",
     "express": "^4.13.4",
+    "jade": "^1.11.0",
     "mongodb": "^2.1.7",
     "passport": "^0.3.2"
   }
