--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.13.4",
     "jade": "^1.11.0",
     "mongodb": "^2.1.7",
+    "mongoose": "^4.4.6",
     "passport": "^0.3.2"
   }
 }
