--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^4.4.6",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^4.0.0"
+    "passport-local-mongoose": "^4.0.0",
+    "validator": "^5.1.0"
   }
 }
